--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
+    "@popperjs/core": "^2.10.2",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "formik": "^2.2.9",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.0",
-    "react-dom": "^17.0.2",
+    "react": "16.8.0",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "16.8.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
